--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -32,7 +32,7 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Lint with pylint
       run: |
-        pylint cleaning.py
+        pylint life_expectancy/cleaning.py
     - name: Test with pytest
       run: |
         pytest
