--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -34,5 +34,6 @@ jobs:
       run: |
         pylint life_expectancy/cleaning.py
     - name: Test with pytest
+      working-directory: assignments/life_expectancy
       run: |
         pytest life_expectancy
