--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -34,6 +34,6 @@ jobs:
       run: |
         pylint life_expectancy/cleaning.py
     - name: Test with pytest
-      working-directory: life_expectancy
+      working-directory: life_expectancy/tests
       run: |
         pytest life_expectancy
