--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -35,4 +35,4 @@ jobs:
         pylint life_expectancy/cleaning.py
     - name: Test with pytest
       run: |
-        pytest tests/test_cleaning.py
+        pytest life_expectancy/tests/test_cleaning.py
