--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,7 @@ name = "assignments"
 version = "0.0.1"
 description = "First assignment of the Foundations Learning Path"
 authors = ["Daniel Neves <daniel.neves@daredata.engineering>"]
+packages = [{include = "life_expectancy"}]
 
 # Dependencies and dev-dependencies go here
 dependencies = {python = ">=3.8", pandas = "^1.3"}
@@ -13,7 +14,7 @@ pylint = "^2.11"
 pytest-cov = "^4.0"
 
 [tool.poetry.scripts]
-life_expectancy = "life_expectancy:main"
+life_expectancy = "life_expectancy.main:main"
 
 [tool.pylint."messages control"]
 disable = [
